<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.yiye.AboutActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/activitybackgroud">

    <ImageView
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_logo_128" />

    <TextView
        android:id="@+id/textview_about_version"
        android:layout_marginTop="9dp"
        android:textSize="16sp"
        android:textColor="@color/Grey900"
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/btn_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section_btn_style"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/aboutus_decribe"
        android:textColor="@color/Grey700"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_personal_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/content_marginex"
        android:layout_marginRight="@dimen/content_marginex"
        android:background="@drawable/divider_style" />

    <Button
        android:id="@+id/btn_about_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section_btn_style"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/aboutprod_decribe"
        android:textColor="@color/Grey700"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_personal_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/content_marginex"
        android:layout_marginRight="@dimen/content_marginex"
        android:background="@drawable/divider_style" />

    <Button
        android:id="@+id/btn_about_delectupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section_btn_style"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/delectupdate_decribe"
        android:textColor="@color/Grey700"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/textview_about_bug"
        android:paddingTop="80dp"
        android:textSize="14sp"
        android:textColor="@drawable/superline_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_feedback_decribe"/>

    <TextView
        android:textSize="12sp"
        android:textColor="@color/Grey400"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/copyright_decribe" />
</LinearLayout>
