<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/activitybackgroud"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bookmarklistitem_style"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/imageview_bookmark_item"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/bookmark_image_describe"
                android:scaleType="fitCenter"
                android:src="@drawable/img_loading" />

            <TextView
                android:id="@+id/textview_bookmark_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/imageview_bookmark_item"
                android:text="@string/default_bookmark_title"
                android:textSize="18sp"
                android:maxLines="3"
                android:ellipsize="end"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textview_bookmark_item_uploader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/default_bookmark_uploader"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textview_bookmark_item_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/textview_bookmark_item_uploader"
                android:text="@string/default_bookmark_good"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textview_bookmark_item_uploadtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/default_bookmark_uploadtime"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>